Fix extra border on chat input control - Only border-top was needed, everything else was causing overlap

--- a/public/style.css
+++ b/public/style.css
@@ -24,7 +24,7 @@ div#chatEntries {
 }
 
 div #chatControls {
-  border: solid;
+  border-top: solid;
   margin-top: -2px;
 }
 
